--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,12 @@
         android:theme="@style/AppThemeNoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".activity.QuestionActivity" android:theme="@style/AppTheme"
+            android:name=".activity.GroupActivity"
             android:exported="false" />
+        <activity
+            android:name=".activity.QuestionActivity"
+            android:exported="false"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.MainActivity"
             android:exported="false" />
